--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
     br = branch
     st = status
     files = ! bash -c 'git show --pretty="format:"  --name-only "$(git merge-base "$(git rev-parse --abbrev-ref HEAD)" master)..HEAD" | grep -v "^$" | sort | uniq'
+    cur = rev-parse --abbrev-ref HEAD
 [color]
     diff = auto
     status = auto
